import Foundation

// MARK: - Communication Service
// Handles messaging and notifications via CommunicationService backend

class CommunicationService {
    private let client = APIClient.shared

    // MARK: - Messaging

    /// Get list of conversations for current user
    func getConversations(limit: Int = 20, offset: Int = 0) async throws -> [Conversation] {
        // TODO: Implement gRPC call to CommunicationService.ListConversations
        // Example:
        // let request = ListConversationsRequest(user_id: currentUserId, limit: limit, offset: offset)
        // let response: ListConversationsResponse = try await client.request(endpoint: "/communication/conversations", body: request)
        // return response.conversations.map { /* map proto to Conversation */ }
        throw APIError.notFound
    }

    /// Get messages for a specific conversation
    func getMessages(conversationId: String, limit: Int = 50, offset: Int = 0) async throws -> [Message] {
        // TODO: Implement gRPC call to CommunicationService.GetMessages
        // Example:
        // let request = GetMessagesRequest(conversation_id: conversationId, limit: limit, offset: offset)
        // let response: GetMessagesResponse = try await client.request(endpoint: "/communication/messages", body: request)
        // return response.messages.map { /* map proto to Message */ }
        throw APIError.notFound
    }

    /// Send a message
    func sendMessage(conversationId: String, content: String, mediaUrl: String? = nil) async throws -> Message {
        // TODO: Implement gRPC call to CommunicationService.SendMessage
        // Example:
        // let request = SendMessageRequest(
        //     conversation_id: conversationId,
        //     content: content,
        //     media_url: mediaUrl
        // )
        // let response: SendMessageResponse = try await client.request(endpoint: "/communication/send", body: request)
        // return /* map proto Message to Swift Message */
        throw APIError.notFound
    }

    /// Stream messages in real-time (if backend supports streaming)
    func streamMessages(conversationId: String) async throws -> AsyncStream<Message> {
        // TODO: Implement gRPC streaming call to CommunicationService.StreamMessages
        // This would require gRPC streaming support in APIClient
        throw APIError.notFound
    }

    // MARK: - Notifications

    /// Get notifications for current user
    func getNotifications(unreadOnly: Bool = false, limit: Int = 20, offset: Int = 0) async throws -> (notifications: [NotificationItem], unreadCount: Int) {
        // TODO: Implement gRPC call to CommunicationService.GetNotifications
        // Example:
        // let request = GetNotificationsRequest(
        //     user_id: currentUserId,
        //     unread_only: unreadOnly,
        //     limit: limit,
        //     offset: offset
        // )
        // let response: GetNotificationsResponse = try await client.request(endpoint: "/communication/notifications", body: request)
        // return (
        //     notifications: response.notifications.map { /* map proto to NotificationItem */ },
        //     unreadCount: response.unread_count
        // )
        throw APIError.notFound
    }

    /// Mark a notification as read
    func markNotificationRead(id: String) async throws {
        // TODO: Implement gRPC call to CommunicationService.MarkNotificationRead
        // Example:
        // let request = MarkNotificationReadRequest(notification_id: id)
        // try await client.request(endpoint: "/communication/mark-read", body: request)
    }

    /// Mark all notifications as read
    func markAllNotificationsRead() async throws {
        // TODO: Implement gRPC call to CommunicationService.MarkAllNotificationsRead
        // Example:
        // let request = MarkAllNotificationsReadRequest(user_id: currentUserId)
        // try await client.request(endpoint: "/communication/mark-all-read", body: request)
    }

    // MARK: - Push Notifications

    /// Register device token for push notifications
    func registerPushToken(token: String, deviceType: String = "ios") async throws {
        // TODO: Implement gRPC call to CommunicationService.RegisterPushToken
        // Example:
        // let request = RegisterPushTokenRequest(
        //     user_id: currentUserId,
        //     token: token,
        //     device_type: deviceType
        // )
        // try await client.request(endpoint: "/communication/register-push", body: request)
    }
}
